--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lotide",
+  "name": "@ceciliay/lotide",
   "version": "1.0.0",
-  "description": "",
+  "description": "A mini clone of the Lodash library to practice write functions/tests and publish an open source package.",
   "main": "assertArraysEqual.js",
   "directories": {
     "test": "test"
@@ -13,7 +13,9 @@
     "type": "git",
     "url": "git+https://github.com/ysycecilia/lotide.git"
   },
-  "author": "",
+  "author":  {
+    "name": "Siyi (Cecilia) Yuan"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ysycecilia/lotide/issues"
