--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ceciliay/lotide",
+  "name": "@ceciliaysy/lotide",
   "version": "1.0.0",
   "description": "A mini clone of the Lodash library to practice write functions/tests and publish an open source package.",
   "main": "assertArraysEqual.js",
